@@ -22,16 +22,18 @@
   (let [java-cmd (config/get-java-command)
         classpath (config/get-classpath)
         main-class (config/get-main-class)
-        endpoint (config/get-stream-endpoint stream-type)
-        debug? (config/get-debug-flag)]
+        stream-url (config/build-stream-url stream-type)]
     (cond-> [java-cmd
-             "-cp" classpath]
-      debug? (concat ["-Dpotatoclient.debug=true"])
+             "-cp" classpath
+             "-Djava.awt.headless=false"
+             "-Dgstreamer.plugin.path=/usr/lib/x86_64-linux-gnu/gstreamer-1.0"
+             "--enable-native-access=ALL-UNNAMED"]
+      (config/get-debug-flag) (concat ["-Dpotatoclient.debug=true"])
       true (concat [main-class
-                    "--host" host
-                    "--endpoint" endpoint
-                    "--parent-pid" (str parent-pid)
-                    "--stream-type" (name stream-type)]))))
+                    (name stream-type)
+                    stream-url
+                    host
+                    (str parent-pid)]))))
 
 ;; ============================================================================
 ;; Output Handling
@@ -48,27 +50,27 @@
           (when-let [line (.readLine reader)]
             (case output-type
               :stdout (logging/log-debug {:id :stream/stdout
-                                         :stream stream-type
-                                         :output line})
+                                          :stream stream-type
+                                          :output line})
               :stderr (logging/log-warn {:id :stream/stderr
-                                        :stream stream-type
-                                        :error line}))
+                                         :stream stream-type
+                                         :error line}))
             (recur))))
       (catch Exception e
         (when-not (instance? java.io.IOException e)
           (logging/log-error {:id :stream/output-error
-                             :stream stream-type
-                             :error (.getMessage e)}))))))
+                              :stream stream-type
+                              :error (.getMessage e)}))))))
 
 (defn- start-output-handlers
   "Start threads to handle process output"
   {:malli/schema [:=> [:cat :keyword :any] :nil]}
   [stream-type process]
-  (let [stdout-handler (create-output-handler stream-type 
-                                              (.getInputStream process) 
+  (let [stdout-handler (create-output-handler stream-type
+                                              (.getInputStream process)
                                               :stdout)
-        stderr-handler (create-output-handler stream-type 
-                                              (.getErrorStream process) 
+        stderr-handler (create-output-handler stream-type
+                                              (.getErrorStream process)
                                               :stderr)]
     (.start (Thread. stdout-handler (str (name stream-type) "-stdout")))
     (.start (Thread. stderr-handler (str (name stream-type) "-stderr"))))
@@ -86,29 +88,35 @@
     (logging/log-info {:id :stream/spawning-process
                        :stream stream-type
                        :host host})
-    
+
     (let [command (build-command stream-type host parent-pid)
-          pb (ProcessBuilder. ^java.util.List command)
+          project-root (io/file (System/getProperty "user.dir"))
+          _ (logging/log-debug {:id :stream/command
+                                :stream stream-type
+                                :command (str/join " " command)
+                                :working-dir (.getAbsolutePath project-root)})
+          pb (doto (ProcessBuilder. ^java.util.List command)
+               (.directory project-root))
           process (.start pb)
           pid (.pid (.toHandle process))]
-      
+
       ;; Start output handlers
       (start-output-handlers stream-type process)
-      
+
       ;; Store process info in app state
       (state/set-stream-status! stream-type :starting pid)
       (state/set-stream-process! stream-type process)
-      
+
       (logging/log-info {:id :stream/process-spawned
                          :stream stream-type
                          :pid pid})
-      
+
       process)
-    
+
     (catch Exception e
       (logging/log-error {:id :stream/spawn-failed
-                         :stream stream-type
-                         :error (.getMessage e)})
+                          :stream stream-type
+                          :error (.getMessage e)})
       (state/set-stream-error! stream-type (.getMessage e))
       nil)))
 
@@ -130,25 +138,25 @@
         (logging/log-info {:id :stream/stopping-process
                            :stream stream-type
                            :pid pid})
-        
+
         ;; Update status
         (state/set-stream-status! stream-type :stopping pid)
-        
+
         ;; Try graceful shutdown
         (.destroy ^Process process)
-        
+
         ;; Wait up to 5 seconds
         (when-not (.waitFor ^Process process 5 TimeUnit/SECONDS)
           (logging/log-warn {:id :stream/force-killing
-                            :stream stream-type
-                            :pid pid})
+                             :stream stream-type
+                             :pid pid})
           (.destroyForcibly ^Process process)
           (.waitFor ^Process process 2 TimeUnit/SECONDS))
-        
+
         (logging/log-info {:id :stream/process-stopped
-                          :stream stream-type
-                          :pid pid})
-        
+                           :stream stream-type
+                           :pid pid})
+
         ;; Update status
         (state/set-stream-status! stream-type :stopped nil))))
   nil)
